--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,13 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  h2 Welcome to #{title}
+  p In order to access your secrets, please log in using your credentials below
+  form(method="POST" action="/users/login")
+    label(for="username") Username:
+    input(type="text" name="username")
+    br
+    label(for="password") Password:
+    input(type="password" name="password")
+    br
+    input(type="submit" name="submit" value="Login")
