--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -4,6 +4,12 @@ block content
   h2 Welcome back #{username}
   p You have successfully logged in :)
   h3 Your Secrets.....
+
+  - var values = secrets;
+  ul
+    each val in values.length ? values : ['You have no secrets']
+      li= val
+
   form(method="POST" action="/users/mySecrets")
     label(for="secretTitle") Secret Title:
     input(type="text" name="secretTitle")
