Displaying stored secrets as an unordered list

--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -8,8 +8,11 @@ block content
   - var values = secrets;
   ul
     each val in values.length ? values : ['You have no secrets']
-      li= val
+      li #{val.secretTitle}
+        ul
+          li #{val.secret}
 
+h3 Add a New Secret.....
   form(method="POST" action="/users/mySecrets")
     label(for="secretTitle") Secret Title:
     input(type="text" name="secretTitle")
