Users can now add new secrets

--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -12,8 +12,8 @@ block content
         ul
           li #{val.secret}
 
-h3 Add a New Secret.....
-  form(method="POST" action="/users/mySecrets")
+  h3 Add a New Secret.....
+  form(method="POST" action="/users/secrets")
     label(for="secretTitle") Secret Title:
     input(type="text" name="secretTitle")
     br
