--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -3,19 +3,23 @@ extends layout
 block content
   h2 Welcome back #{username}
   p You have successfully logged in :)
-  h3 Your Secrets.....
 
   - var values = secrets;
-  ul
-    each val in values.length ? values : ['You have no secrets']
-      li #{val.secretTitle}
-        ul
-          li #{val.secret}
+  if values.length > 0
+    h3 Your Secrets...
+    ul
+      each val in values.length ? values : ['There are no values']
+        li #{val.secretTitle}
+          ul
+            li #{val.secret}
+              form(method="POST" action="/users/secrets/modifySecrets")
+                input(type="hidden" name="secretId" value=val.secretId)
+                input(type="submit" name="submit" value="Delete this Secret")
 
   h3 Add a New Secret.....
-  form(method="POST" action="/users/secrets")
+  form(method="POST" action="/users/secrets/modifySecrets")
     label(for="secretTitle") Secret Title:
-    input(type="text" name="secretTitle")
+    input(type="text" name="secretTitle" autofocus)
     br
     label(for="secret") Secret:
     input(type="text" name="secret")
