--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
   p In order to access your secrets, please log in using your credentials below
   form(method="POST" action="/users/login")
     label(for="username") Username:
-    input(type="text" name="username")
+    input(type="text" name="username" id="username")
     br
     label(for="password") Password:
     input(type="password" name="password")
