--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -7,6 +7,29 @@ block content
   - var values = secrets;
   if values.length > 0
     h3 Your Secrets...
+    select(id="sortSecretsBy")
+      option(value="Date" selected) Sort By Date
+      option(value="Title") Sort By Title
+    form(method="POST" action="/users/secrets/modifySecrets")
+      input(type="submit" name="submit" value="Sort Secrets")
+
+    script.
+      var sortSecretsById = document.getElementById("sortSecretsBy");
+      var allCookies = document.cookie.replace("/ /g", "").split(";");
+
+      for(var i = 0; i < allCookies.length; i++){
+        if(allCookies[i].indexOf("sortByDate") > -1)
+        {
+          var sortBy = allCookies[i].split("=")[1] == "true" ? "Date" : "Title";
+          sortSecretsById.value = sortBy;
+        }
+      }
+
+      sortSecretsById.addEventListener("click", function(){
+        var sortBy = sortSecretsById.value == "Date" ? "true" : "false";
+        document.cookie = "sortByDate=" + sortBy + ";path=/";
+      });
+
     ul
       each val in values.length ? values : ['There are no values']
         li #{val.secretTitle}
