Successfully using express-session to keep users that are not logged in out of the user area

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   h1= title
   h2 Welcome to #{title}
   p In order to access your secrets, please log in using your credentials below
-  form(method="POST" action="/users/login")
+  form(method="POST" action="/login")
     label(for="username") Username:
     input(type="text" name="username" id="username")
     br
