Issue with sorting - Case Sensitive
Working to make it insensitive

--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -10,7 +10,7 @@ block content
     select(id="sortSecretsBy")
       option(value="Date" selected) Sort By Date
       option(value="Title") Sort By Title
-    form(method="POST" action="/users/secrets/modifySecrets")
+    form(method="GET" action="/users/secrets")
       input(type="submit" name="submit" value="Sort Secrets")
 
     script.
@@ -35,12 +35,12 @@ block content
         li #{val.secretTitle}
           ul
             li #{val.secret}
-              form(method="POST" action="/users/secrets/modifySecrets")
+              form(method="POST" action="/users/secrets/deleteSecret")
                 input(type="hidden" name="secretId" value=val.secretId)
                 input(type="submit" name="submit" value="Delete this Secret")
 
   h3 Add a New Secret.....
-  form(method="POST" action="/users/secrets/modifySecrets")
+  form(method="POST" action="/users/secrets/addNewSecret")
     label(for="secretTitle") Secret Title:
     input(type="text" name="secretTitle" autofocus)
     br
