--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,4 +5,6 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     h1 Secrets
+    form(method="post" action="/logout")
+        input(type="submit" name="submit" value="Logout")
     block content
