--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -3,6 +3,8 @@ extends layout
 block content
   h2 Welcome back #{username}
   p You have successfully logged in :)
+  form(method="post" action="/logout")
+        input(type="submit" name="submit" value="Logout")
 
   - var values = secrets;
   if values.length > 0
