Incorporating jQuery UI
Displaying secrets in a collapsible accordian menu

--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -32,14 +32,15 @@ block content
         document.cookie = "sortByDate=" + sortBy + ";path=/";
       });
 
-    ul
+    div(id="accordion")
       each val in values.length ? values : ['There are no values']
-        li #{val.secretTitle}
-          ul
-            li #{val.secret}
-              form(method="POST" action="/users/secrets/deleteSecret")
-                input(type="hidden" name="secretId" value=val.secretId)
-                input(type="submit" name="submit" value="Delete this Secret")
+        div(class="group")
+          h3 #{val.secretTitle}
+          div
+            p #{val.secret}
+                form(method="POST" action="/users/secrets/deleteSecret")
+                    input(type="hidden" name="secretId" value=val.secretId)
+                    input(type="submit" name="submit" value="Delete this Secret")
 
   h3 Add a New Secret.....
   form(method="POST" action="/users/secrets/addNewSecret")
