--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,3 +14,10 @@ a {
 .warning {
     color: red;
 }
+#footer {
+    width: 100%;
+    text-align: center;
+    position: fixed;
+    bottom 0;
+    left 0;
+}
