--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,15 @@
 doctype html
 html
-  head
-    title My Secrets Vault - #{title}
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    h1 Secrets
-    block content
+    head
+        title My Secrets Vault - #{title}
+        link(rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css")
+        link(rel='stylesheet', href='/stylesheets/style.css')
+        script(src="https://code.jquery.com/jquery-1.10.2.js")
+        script(src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js")
+        script(src="/javascripts/script.js")
+    body
+        h1 Secrets
+        block content
+
+        div(id="footer") Laura Pigott
+        
