--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -37,10 +37,16 @@ block content
         div(class="group")
           h3 #{val.secretTitle}
           div
-            p #{val.secret}
-                form(method="POST" action="/users/secrets/deleteSecret")
-                    input(type="hidden" name="secretId" value=val.secretId)
-                    input(type="submit" name="submit" value="Delete this Secret")
+            p(class="secretText") #{val.secret}
+            button(class="editSecret button" id=val.secretId) Edit Secret
+            form(class="updateSecret" method="POST" action="/users/secrets/updateSecret")
+                input(type="text" name="newSecretText" class="newSecretText" value=val.secret)
+                input(type="hidden" name="secretId" value=val.secretId)
+                input(type="button" class="button cancel" value="Cancel")
+                input(type="submit" name="submit" class="button" value="Save Changes")
+            form(class="button deleteSecret" method="POST" action="/users/secrets/deleteSecret")
+                input(type="hidden" name="secretId" value=val.secretId)
+                input(type="submit" name="submit" value="Delete this Secret")
 
   h3 Add a New Secret.....
   form(method="POST" action="/users/secrets/addNewSecret")
