--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,8 +8,9 @@ html
         script(src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js")
         script(src="/javascripts/script.js")
     body
-        h1 Secrets
-        block content
+        div
+            h1 Secrets
+            block content
 
         div(id="footer") Laura Pigott
         
