--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -2,35 +2,18 @@ extends layout
 
 block content
   h2 Welcome back #{username}
-  p You have successfully logged in :)
-  form(method="post" action="/logout")
+  form(class="logout" method="post" action="/logout")
         input(type="submit" name="submit" value="Logout")
 
   - var values = secrets;
   if values.length > 0
     h3 Your Secrets...
-    select(id="sortSecretsBy")
-      option(value="Date" selected) Sort By Date
-      option(value="Title") Sort By Title
-    form(method="GET" action="/users/secrets")
-      input(type="submit" name="submit" value="Sort Secrets")
-
-    script.
-      var sortSecretsById = document.getElementById("sortSecretsBy");
-      var allCookies = document.cookie.replace("/ /g", "").split(";");
-
-      for(var i = 0; i < allCookies.length; i++){
-        if(allCookies[i].indexOf("sortByDate") > -1)
-        {
-          var sortBy = allCookies[i].split("=")[1] == "true" ? "Date" : "Title";
-          sortSecretsById.value = sortBy;
-        }
-      }
-
-      sortSecretsById.addEventListener("click", function(){
-        var sortBy = sortSecretsById.value == "Date" ? "true" : "false";
-        document.cookie = "sortByDate=" + sortBy + ";path=/";
-      });
+    div(id="sortOptions")
+        select(id="sortSecretsBy")
+            option(value="secretTimePosted" selected) Sort By Date
+            option(value="secretTitle") Sort By Title
+        form(method="GET" action="/users/secrets")
+            input(type="submit" name="submit" value="Sort Secrets")
 
     div(id="accordion")
       each val in values.length ? values : ['There are no values']
