Stopping users from returning to home page once logged in
Forcing them to use the logout button. Also ensuring that there is no way for users that are not signed in, to get past the home page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,3 +47,12 @@ a {
     right:0;
     top:0;
 }
+#sortOptions {
+    text-align:right;
+}
+#sortOptions > * {
+    display: inline-block;
+}
+#sortOptions select {
+    margin-right: 2%;
+}
