--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -13,7 +13,7 @@ block content
             option(value="secretTimePosted" selected) Sort By Date
             option(value="secretTitle") Sort By Title
         form(method="GET" action="/users/secrets")
-            input(type="submit" name="submit" value="Sort Secrets")
+            input(type="submit" name="submit" value="Sort")
 
     div(id="accordion")
       each val in values.length ? values : ['There are no values']
