--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -7,7 +7,7 @@ block content
 
   - var values = secrets;
   if values.length > 0
-    h3 Your Secrets...
+    h3 We've kept your secrets safe...
     div(id="sortOptions")
         select(id="sortSecretsBy")
             option(value="secretTimePosted" selected) Sort By Date
