--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,9 +8,11 @@ html
         script(src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js")
         script(src="/javascripts/script.js")
     body
-        div
+        div(id="container")
             h1 Secrets
             block content
-
-        div(id="footer") Laura Pigott
+            
+        div(id="footer") 
+            | &copy; 2016 
+            a(href="http://www.pigottlaura.com" target="_blank") Laura Pigott
         
