--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h2 Welcome back #{username}
-  form(class="logout" method="post" action="/logout")
+  form(id="logout" method="post" action="/logout")
         input(type="submit" name="submit" value="Logout")
 
   - var values = secrets;
@@ -12,7 +12,7 @@ block content
         select(id="sortSecretsBy")
             option(value="secretTimePosted" selected) Sort By Date
             option(value="secretTitle") Sort By Title
-        form(method="GET" action="/users/secrets")
+        form(id="sort" method="GET" action="/users/secrets")
             input(type="submit" name="submit" value="Sort")
 
     div(id="accordion")
@@ -30,13 +30,13 @@ block content
             form(class="button deleteSecret" method="POST" action="/users/secrets/deleteSecret")
                 input(type="hidden" name="secretId" value=val.secretId)
                 input(type="submit" name="submit" value="Delete this Secret")
-
-  h3 Add a New Secret.....
-  form(method="POST" action="/users/secrets/addNewSecret")
-    label(for="secretTitle") Secret Title:
-    input(type="text" name="secretTitle" autofocus)
-    br
-    label(for="secret") Secret:
-    input(type="text" name="secret")
-    br
-    input(type="submit" name="submit" value="Keep my Secret")
+  div(id="addNew") 
+    h3 Add a New Secret.....
+    form(id="addNewSecret" method="POST" action="/users/secrets/addNewSecret")
+        label(for="secretTitle") Secret Title:
+        input(type="text" name="secretTitle" autofocus)
+        br
+        label(for="secret") Secret:
+        input(type="text" name="secret")
+        br
+        input(type="submit" name="submit" value="Keep my Secret")
