--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -25,11 +25,11 @@ block content
             form(class="updateSecret" method="POST" action="/users/secrets/updateSecret")
                 input(type="text" name="newSecretText" class="newSecretText" value=val.secret)
                 input(type="hidden" name="secretId" value=val.secretId)
-                input(type="button" class="button cancel" value="Cancel")
-                input(type="submit" name="submit" class="button" value="Save Changes")
+                input(type="button" class="button cancel marginAbove" value="Cancel")
+                input(type="submit" name="submit" class="button marginAbove" value="Save Changes")
             form(class="button deleteSecret" method="POST" action="/users/secrets/deleteSecret")
                 input(type="hidden" name="secretId" value=val.secretId)
-                input(type="submit" name="submit" value="Delete this Secret")
+                input(type="submit" name="submit" value="Delete Secret")
   div(id="addNew") 
     h3 Add a New Secret.....
     form(id="addNewSecret" method="POST" action="/users/secrets/addNewSecret")
