--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,4 @@
+/* ------------------------- General Rules ------------------------- */
 body {
     position: relative;
     padding: 0;
@@ -6,25 +7,22 @@ body {
     background: #000000 url("../images/backgroundNotebook.jpg") no-repeat fixed center;
     background-size: cover;
 }
-
 #container {
     position: relative;
     width: 80%;
     height: 100vh;
     padding: 2%;
     margin: 0 auto 20% auto;
-    background:rgba(255,255,255,0.5);
+    background:rgba(255,255,255,0.4);
 }
-
-a {
-  color: #000000;
-  text-decoration: none;
+.button, button input {
+    display: inline-block;
+    width: 35% !important;
+    float: right;
 }
-
-.secret span {
-  color: #00FF00;
+.marginAbove {
+    margin-top: 2%;
 }
-
 .warning {
     color: red;
 }
@@ -36,30 +34,6 @@ a {
     position: fixed;
     bottom: 0;
     left: 0;
-}
-
-.updateSecret {
-    margin: 1% 0 3% 0;
-}
-.updateSecret input {
-    width: 99%;
-    margin: 3% 0;
-}
-
-.button, button input {
-    display: inline-block;
-    width: 35% !important;
-    float: right;
-}
-
-#sortOptions {
-    text-align:right;
-}
-#sortOptions > * {
-    display: inline-block;
-}
-#sortOptions select {
-    margin-right: 2%;
 }
 form {
     position: relative;
@@ -80,7 +54,44 @@ form input[type="submit"]{
     margin-top: 2%;
     width: 30%;
 }
+#footer a {
+  color: #000000;
+  text-decoration: none;
+}
 
+/* ------------------------- Secrets Page ------------------------- */
+.group h3, input[type="submit"], button, input.button {
+    background: #000000 url("../images/wood.jpg") no-repeat;
+    background-size: cover;
+    color: #FFFFFF;
+    font-weight: 500;
+}
+select, input[type="submit"], button, input.button {
+    cursor: pointer;
+    font-size: 14px;
+    padding: 10px;
+}
+.secret span {
+  color: #00FF00;
+}
+.updateSecret {
+    margin: 1% 0 3% 0;
+}
+.updateSecret input {
+    width: 99%;
+    margin: 3% 0;
+}
+#addNew {
+    margin-top: 8%;
+    padding: 4%;
+}
+#addNew h3{
+    margin-top: 0;
+}
+#addNew, #footer, #errorStack {
+    border: 1px solid #d3d3d3;
+    background: #cccccc url("http://code.jquery.com/ui/1.11.4/themes/smoothness/images/ui-bg_glass_75_e6e6e6_1x400.png") 50% 50% repeat-x;
+}
 #logout {
     width: 20%;
     position: absolute;
@@ -94,39 +105,25 @@ form input[type="submit"]{
     margin: 0 !important;
     vertical-align: text-bottom;
 }
-
 #sortOptions {
     margin-bottom: 2%;
+    text-align:right;
+}
+#sortOptions > * {
+    display: inline-block;
+}
+#sortOptions select {
+    margin-right: 2%;
 }
 
-#addNew {
-    margin-top: 8%;
-    padding: 4%;
-}
-
-.marginAbove {
+/* ------------------------- Error Page ------------------------- */
+#errorStack {
     margin-top: 2%;
 }
-
-#addNew, #footer, input[type="submit"], #errorStack, button, input.button {
-    border: 1px solid #d3d3d3;
-    background: #cccccc url("http://code.jquery.com/ui/1.11.4/themes/smoothness/images/ui-bg_glass_75_e6e6e6_1x400.png") 50% 50% repeat-x;
-}
-
 pre {
     white-space: pre-wrap;       /* CSS 3 */
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
     white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
-}
-
-#addNew h3{
-    margin-top: 0;
-}
-
-.group h3 {
-    background: #000000 url("../images/wood.jpg") no-repeat;
-    background-size: cover;
-    color: #FFFFFF;
 }
