--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,7 +28,7 @@ body {
 }
 #footer {
     width: 100%;
-    padding: 4% 0;
+    padding: 20px 0;
     text-align: center;
     margin-top: 2%;
     position: fixed;
