--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h2 Welcome to the Secrets Vault
+  h2 Welcome to the Secrets Journal
   p In order to access your secrets, please log in using your credentials below or create a new account
   div(id="tabs")
     ul
