--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title My Secrets Vault - #{title}
+        title My Secrets Journal - #{title}
         link(rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css")
         link(rel='stylesheet', href='/stylesheets/style.css')
         script(src="https://code.jquery.com/jquery-1.10.2.js")
