Adding heading if no secrets

--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -30,6 +30,9 @@ block content
             form(class="button deleteSecret" method="POST" action="/users/secrets/deleteSecret")
                 input(type="hidden" name="secretId" value=val.secretId)
                 input(type="submit" name="submit" value="Delete Secret")
+  else 
+    h3 You have no secrets :( Why not add some now... 
+    
   div(id="addNew") 
     h3 Add a New Secret.....
     form(id="addNewSecret" method="POST" action="/users/secrets/addNewSecret")
