--- a/views/secrets.jade
+++ b/views/secrets.jade
@@ -23,7 +23,7 @@ block content
             p(class="secretText") #{val.secret}
             button(class="editSecret button" id=val.secretId) Edit Secret
             form(class="updateSecret" method="POST" action="/users/secrets/updateSecret")
-                input(type="text" name="newSecretText" class="newSecretText" value=val.secret)
+                textarea(name="newSecretText" class="newSecretText" rows="4") val.secret
                 input(type="hidden" name="secretId" value=val.secretId)
                 input(type="button" class="button cancel marginAbove" value="Cancel")
                 input(type="submit" name="submit" class="button marginAbove" value="Save Changes")
@@ -40,6 +40,6 @@ block content
         input(type="text" name="secretTitle" autofocus)
         br
         label(for="secret") Secret:
-        input(type="text" name="secret")
+        textarea(name="secret" rows="4")
         br
         input(type="submit" name="submit" value="Keep my Secret")
